[package]
name = "yc"
version = "0.0.1"
authors = ["Arniu <arniu2006@gmail.com>"]
repository = "https://github.com/arniu/yc"
homepage = "https://github.com/arniu/yc"
license = "MIT OR Apache-2.0"
readme = "README.md"

description="""
YouCloud - UCloud SDK for Rust
"""

edition = "2018"

[workspace]
members = [
    "yc-core",
    "yc-file",
    "yc-server",
]

[dependencies]
